cc: Images: Add more information to image decode controller DCHECKs

This patch adds more information to the image decode controller DCHECKs
in order to be able to diagnose the problems better.

BUG=597803
R=nyquist@chromium.org
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1869573002

Cr-Commit-Position: refs/heads/master@{#385575}

Former-commit-id: f4334d7c1f87b92397c8572a9c413d13eb135a28